Fix <pre> css, to drop scrollbars.

--- a/local.css
+++ b/local.css
@@ -31,7 +31,6 @@ code, pre {
 }
 
 pre {
-	max-width: 640px;
 	margin: 0 auto;
 	padding: .5em;
 }
